uptime/uptimelab/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime
  template:
    metadata:
      labels:
        app: uptime
    spec:
      containers:
        - name: uptime
          image: louislam/uptime-kuma:2.4.0
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: data-volume
              mountPath: /app/data
              readOnly: false
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: uptime-data-pvc
