uptime/uptimelab/service.yml
apiVersion: v1
kind: Service
metadata:
  name: uptime-service
spec:
  selector:
    app: uptime
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
